# setuptools metadata
[metadata]
name = por
version = 0.1.0
# version = attr: src.VERSION
description = The unofficial programmatic POR
long_description = file: README.md
long_description_content_type = text/markdown
author = Adam Turner
url = https://github.com/the-scouts/por
license = MIT
license_file = LICENSE
platforms = any
# Classifiers list: https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development
    Topic :: Utilities
keywords = standards, semantic, scouts

# setuptools options
[options]
package_dir =
    =src
packages = find_namespace:
include_package_data = False
python_requires = >=3.9
install_requires =
    requests
    docutils
    Sphinx

[options.packages.find]
where=src
